unpackaged/post/08_redu_object_tracking/objects/rio_ed__Order_Line__c.object
<CustomObject>
    <fields>
        <fullName>rio_ed__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rio_ed__Order__c</fullName>
        <label>RIO Order</label>
        <referenceTo>rio_ed__Order__c</referenceTo>
        <relationshipLabel>Order Lines</relationshipLabel>
        <relationshipName>Order_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rio_ed__Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rio_ed__Study_Credit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Study Credit</label>
        <referenceTo>rio_ed__Study_Credit__c</referenceTo>
        <relationshipLabel>Used Order Lines</relationshipLabel>
        <relationshipName>Used_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rio_ed__Study_Offering__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Study Offering</label>
        <referenceTo>rio_ed__Study_Offering__c</referenceTo>
        <relationshipLabel>Order Lines</relationshipLabel>
        <relationshipName>Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rio_ed__Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>RIO Order Line</label>
    <nameField>
        <displayFormat>OL-{00000}</displayFormat>
        <label>Order Line #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>